[project]
name = "raphael-notifications"
version = "0.1.0"
description = "In-app inbox, preferences, email/push routing via external providers"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "httpx>=0.27",
    "twilio>=9.0",
    "raphael-contracts>=0.1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.4", "httpx>=0.27"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/raphael_notifications"]


[tool.uv.sources]
raphael-contracts = { path = "../raphael-contracts", editable = true }

[tool.ruff]
line-length = 100
target-version = "py311"
